Improve advanced for pyp
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/advanced/advanced.yml
+++ b/shared/latex/python/advanced/advanced.yml
@@ -7,7 +7,7 @@ default_titles:
   metaclasses: Méta-classes
   tp: Travaux pratiques
 flavors:
-  full:
+  pyp:
     - generators
     - /questions
     - tp-generators
@@ -20,7 +20,26 @@ flavors:
     - context-managers
     - /questions
     - tp-context-managers
-  medium:
+    - closures
+    - /questions
+    - tp-closures
+    - comprehensions
+    - /questions
+    - tp-comprehensions
+  pav:
+    - generators
+    - /questions
+    - tp-generators
+    - decorators
+    - /questions
+    - tp-decorators
+    - metaclasses
+    - /questions
+    - tp-metaclasses
+    - context-managers
+    - /questions
+    - tp-context-managers
+  aap:
     - decorators
     - /questions
     - closures
