--- a/sparks-formation/INTRA/2022-02-testia/targets.yml
+++ b/sparks-formation/INTRA/2022-02-testia/targets.yml
@@ -17,7 +17,7 @@
       flavor: full
 
     - path: python/advanced
-      flavor: full
+      flavor: pav
 
     - path: python/collections
       flavor: full
