--- a/sparks-formation/pav/targets.yml
+++ b/sparks-formation/pav/targets.yml
@@ -12,7 +12,7 @@
       flavor: full
 
     - path: python/advanced
-      flavor: full
+      flavor: pav
 
     - path: python/collections
       flavor: full
