Tweak performance section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/performance/performance.yml
+++ b/shared/latex/python/performance/performance.yml
@@ -1,5 +1,23 @@
+default_titles:
+  measure: Mesure des performances
+  parallelism: Programmation parallèle
+  concurrency: Programmation concurrente
+
 flavors:
   full:
-    - performance
+    - measure
     - /questions
+    - parallelism
+    - /questions
+    - concurrency
+    - /questions
+    - tp
+
+  light:
+    - parallelism
+    - /questions
+    - concurrency
+    - /questions
+    - tp
+
 title: Performances
