--- a/shared/latex/python/advanced/advanced.yml
+++ b/shared/latex/python/advanced/advanced.yml
@@ -3,7 +3,9 @@ default_titles:
   context-managers: Gestionnaires de contexte
   closures: Fermetures
   decorators: Décorateurs
+  design-patterns: Patrons de conception
   generators: Générateurs
+  interfaces: Interfaces
   metaclasses: Méta-classes
   tp: Travaux pratiques
 flavors:
@@ -26,6 +28,12 @@ flavors:
     - comprehensions
     - /questions
     - tp-comprehensions
+    - interfaces
+    - /questions
+    - tp-interfaces
+    - design-patterns
+    - /questions
+    - tp-design-patterns
   pav:
     - generators
     - /questions
