Work on databases & sockets for PYP
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/sys-admin/sys-admin.yml
+++ b/shared/latex/python/sys-admin/sys-admin.yml
@@ -1,5 +1,4 @@
 default_titles:
-  db: Base de donnnées
   env: Variables d'environnement
   files: Manipulation de fichiers
   std: Flux standards
@@ -8,7 +7,7 @@ flavors:
     - files
     - env
     - std
-    - db
+    - $/python/databases: light
     - /questions
     - tp
 title: Fonctionnalités d'administration système
