first commit pour Bernard Tempestini

--- a/shared/latex/ml/ml.yml
+++ b/shared/latex/ml/ml.yml
@@ -9,6 +9,10 @@ default_titles:
   /tp-help: Ressources pour les travaux pratiques
 
 flavors:
+  light:
+    - intro
+    - evaluation
+    - learning
   intro:
     - intro
     - evaluation
