Translate en/python/production light
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/python/production/production.yml
+++ b/shared/latex/en/python/production/production.yml
@@ -1,8 +1,8 @@
 default_titles:
-  deployment: Déploiement
-  environment: Gestion de l'environment logiciel
-  packaging: Création de paquets Python
-  cli: Interfaces en ligne de commande
+  deployment: Deployment
+  environment: Software environment management
+  packaging: Python packages creation
+  cli: Command line interfaces
 flavors:
   full:
     - environment
@@ -26,4 +26,4 @@ flavors:
     - cli
     - /en/questions
     - tp-cli
-title: Ingénierie de projets en Python
+title: Python software engineering
