--- a/shared/code/python/production/packaging/example.toml
+++ b/shared/code/python/production/packaging/example.toml
@@ -1,20 +1,20 @@
 [tool.poetry]
 authors = ["m09 <142691+m09@users.noreply.github.com>"]
-classifiers = ["Topic :: Software Development :: Build Tools"]
 description = "Tool to handle multiple beamer decks."
-homepage = "https://github.com/m09/deckz"
-license = "Apache-2.0"
 name = "deckz"
 readme = "README.md"
 version = "10.3.0"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-typer = {version = "^0.3.2", extras = ["all"]}
+python = "^3.9"
+typer = {version = "^0.7.0", extras = ["all"]}
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
 
 [tool.poetry.scripts]
 deckz = 'deckz.cli:main'
 
 [build-system]
-build-backend = "poetry.masonry.api"
-requires = ["poetry>=0.12"]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
