--- a/shared/latex/en/unsupervised/dimensionality-reduction/dimensionality-reduction.yml
+++ b/shared/latex/en/unsupervised/dimensionality-reduction/dimensionality-reduction.yml
@@ -1,11 +1,11 @@
 default_titles:
-  demo: Démonstration \texttt{scikit-learn}
+  demo: \texttt{Scikit-learn} demonstration
   intro: Introduction
-  pca-lda: Projections linéaires
-  pca-variantes: Variantes spécifiques
-  tp: Travaux pratiques
-  tsne-umap: Projections non-linéaires
-  tuto: Exemples \texttt{scikit-learn}
+  pca-lda: Linear projection
+  pca-variantes: Variantes
+  tp: Exercices
+  tsne-umap: Non linear projections
+  tuto: \texttt{Scikit-learn} examples
 
 flavors:
   bda:
@@ -16,14 +16,12 @@ flavors:
     - /questions
     - tuto
     - tp
-    - help-pointers
   mle:
     - intro
     - pca-lda
     - tsne-umap
     - demo
     - /questions
-    - help-pointers
   mlb:
     - intro
     - pca-lda
@@ -31,6 +29,5 @@ flavors:
     - /questions
     - tuto
     - tp
-    - help-pointers
 
 title: Réduction de la dimensionnalité
