--- a/shared/latex/en/nn/nn.yml
+++ b/shared/latex/en/nn/nn.yml
@@ -25,7 +25,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - $/tf-keras: drn
     - $cnn: mle
@@ -39,7 +39,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: drn
@@ -55,7 +55,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: drn
@@ -71,7 +71,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: bda
@@ -87,7 +87,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: bda
@@ -97,7 +97,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: dpl
@@ -106,7 +106,7 @@ flavors:
     - playground
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - $/tf-keras: bda
     - $rnn: dpl
@@ -119,7 +119,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: bda
@@ -135,7 +135,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: dpl
@@ -153,7 +153,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularisation
+    - regularization
     - playground
     - /questions
     - $/tf-keras: bda
