Tweak small things in tf-keras section, mainly in english
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/tf-keras/tf-keras.yml
+++ b/shared/latex/en/tf-keras/tf-keras.yml
@@ -5,5 +5,12 @@ flavors:
   full:
     - tf
     - keras
-    - /questions
+    - /en/questions
+  dpl:
+    - tf
+    - /en/questions
+    - tp-tf
+    - keras
+    - /en/questions
+    - tp-keras
 title: TensorFlow 2 \& Keras
