Fix image captions and small things
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/img/logos/keras-tensorflow.yml
+++ b/shared/img/logos/keras-tensorflow.yml
@@ -1,3 +1,5 @@
-title: Logos Keras et Tensorflow
 author: François Cholet
 license: Domaine public
+title: Logos Keras et Tensorflow
+title: Keras \& Tensorflow logos
+
