--- a/shared/img/ms-coco.yml
+++ b/shared/img/ms-coco.yml
@@ -1,4 +1,5 @@
 author: Tsung-Yi Lin, et al.
 license: "Microsoft COCO: Common Objects in Context"
 title: Description du dataset MS-COCO
+title_en: MS-COCO dataset
 
