--- a/shared/tikz/activations/relu.yml
+++ b/shared/tikz/activations/relu.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: fonction d'activation Rectified Linear Unit (RELU)
+title: Fonction d'activation REctified Linear Unit (RELU)
+title_en: Rectified Linear Unit (RELU) activation function
