--- a/shared/tikz/ml/vision/anomaly-detection.yml
+++ b/shared/tikz/ml/vision/anomaly-detection.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: "Exemple de détection d'anomalie"
+title: Exemple de détection d'anomalie
+title: Anomaly detection example
