--- a/shared/tikz/activations/approximation.yml
+++ b/shared/tikz/activations/approximation.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Illustration du théorème d'approximation universel
+title_en: Visualization of the approximation process
