--- a/shared/tikz/activations/sigmoid.yml
+++ b/shared/tikz/activations/sigmoid.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: fonction d'activation Sigmoïde
+title: Fonction d'activation sigmoïde
+title_en: Sigmoid activation function
