--- a/shared/tikz/activations/tanh.yml
+++ b/shared/tikz/activations/tanh.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: fonction d'activation Tangente Hyperbolique (tanh)
+title: Fonction d'activation tangente hyperbolique (tanh)
+title_en: Hyperbolic tangent (tanh) activation function
