--- a/shared/tikz/ml/vision/super-resolution.yml
+++ b/shared/tikz/ml/vision/super-resolution.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: Exemple de \og super résolution \fg
+title: Exemple de super-résolution
+title_en: Super-resolution example
