Traduction nlp partiellement et fin cnn et ae

--- a/shared/latex/en/nn/ae/ae.yml
+++ b/shared/latex/en/nn/ae/ae.yml
@@ -3,10 +3,10 @@ default_titles:
 flavors:
   dpl:
     - autoencoder
-    - /questions
+    - /en/questions
     - tp
   drn:
     - autoencoder
-    - /questions
+    - /en/questions
     - tp-demo
-title: Auto-encodeurs
+title: Auto-encoders
