--- a/shared/latex/en/nlp/nlp.yml
+++ b/shared/latex/en/nlp/nlp.yml
@@ -14,6 +14,6 @@ flavors:
     - preprocessing
     - tf-idf
     - wordembeddings
-    - /questions
+    - /en/questions
     - help-pointers
 title: Natural Language Processing
