--- a/sparks-formation/INTRA/2023-01-loreal/en/targets.yml
+++ b/sparks-formation/INTRA/2023-01-loreal/en/targets.yml
@@ -23,4 +23,11 @@
   title: Deep Learning
   sections:
     - path: en/nn
-      flavor: dpl
+      flavor: intra-l-oreal
+
+- name: bonus
+  title: Just a "Bit" More
+  sections:
+    - path: en/nn
+      flavor: intra-l-oreal-bonus
+      title: Just a "bit" more
