--- a/shared/latex/en/nn/nn.yml
+++ b/shared/latex/en/nn/nn.yml
@@ -42,4 +42,25 @@ flavors:
     - $transformer: text
     - help-pointers
 
+  intra-l-oreal:
+    - intro
+    - playground
+    - gradient-descent
+    - optimize
+    - deep-optimize
+    - regularization
+    - playground
+    - /en/questions
+    - $/en/tf-keras: dpl
+    - $cnn: dpl
+    - $transformer: text
+    - help-pointers
+
+  intra-l-oreal-bonus:
+    - $ae: dpl
+    - $/en/nlp: dpl
+    - $/en/sequential-data: dpl
+    - $rnn: dpl
+
+
 title: Neural Networks
