--- a/shared/latex/unsupervised/unsupervised.yml
+++ b/shared/latex/unsupervised/unsupervised.yml
@@ -20,4 +20,10 @@ flavors:
     - $anomaly-detection: full
   mlb:
     - $dimensionality-reduction: mlb
+  intra-l-oreal:
+    - introduction
+    - $dimensionality-reduction: mlb
+    - $clustering: intra-l-oreal
+    - $anomaly-detection: full-no-tree
+
 title: Apprentissage non-supervisé
