Traduction img et yml de la section ml

--- a/shared/img/lof.yml
+++ b/shared/img/lof.yml
@@ -1,4 +1,5 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Visualisation de Local Outlier Factor sur un nuage de points
+title_en: Result for the Local Outlier Factor on a scatter plot
 
