--- a/shared/plt/mpl/boxplot.yml
+++ b/shared/plt/mpl/boxplot.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Utilisation de \texttt{boxplot(x)} de trois lois normales.
+title_en: Visualization of \texttt{boxplot(x)} using three normal distributions.
