--- a/shared/plt/mpl/fill-between.yml
+++ b/shared/plt/mpl/fill-between.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Utilisation de \texttt{fill\_between(x ,y ,y1)} sur cosinus et sinus.
+title_en: Visualization of \texttt{fill\_between(x ,y ,y1)} on cosinus and sinus.
