--- a/shared/plt/mpl/hist.yml
+++ b/shared/plt/mpl/hist.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Utilisation de \texttt{hist(x)} avec 10 bins.
+title_en: Visualization of \texttt{hist(x)} using 10 bins.
