--- a/shared/plt/mpl/scales.yml
+++ b/shared/plt/mpl/scales.yml
@@ -1,3 +1,4 @@
 author: Nicolas P. Rougier
 license: BSD
 title: Quatre projections log et linéaire d'un même graphe.
+title_en: Four different projections of the same graph.
