--- a/shared/plt/mpl/scatter.yml
+++ b/shared/plt/mpl/scatter.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: Utilisation de \texttt{scatter(x, y)}
+title: Visualisation de \texttt{scatter(x, y)}
+title_en: Visualization of \texttt{scatter(x, y)}
