--- a/shared/img/isolation-forest.yml
+++ b/shared/img/isolation-forest.yml
@@ -1,4 +1,5 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Visualisation de Isolation Forest sur un nuage de points
+title_en: Isolation Forest visualization on a scatter plot
 
