--- a/shared/img/lof-density.yml
+++ b/shared/img/lof-density.yml
@@ -1,4 +1,5 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Illustration du fonctionement de Local Outlier Factor
+title_en: Local Outlier Factor illustration on one data point
 
