--- a/shared/plt/mpl/simple.yml
+++ b/shared/plt/mpl/simple.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Visualisation d'une fonction cosinus et sinus
+title_en: Cosine and Sinus functions represented in matplotlib
