--- a/shared/plt/polynomial-regression.yml
+++ b/shared/plt/polynomial-regression.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Régression polynomiale sur des données brutes
+title_en: Polynomial regression on raw data
