Traduction yml et img (avec la pj c'est mieux)

--- a/shared/img/dbpedia.yml
+++ b/shared/img/dbpedia.yml
@@ -1,3 +1,4 @@
-title: Illustration des interconnexions avec DBpedia
 author: Charles Sturt University
 license: CC-BY-SA-4.0
+title: Illustration des interconnexions avec DBpedia
+title_en: DBpedia dependencies
