--- a/shared/tikz/neural-networks/cnn/inpainting-anomaly-detect-step1-mask.yml
+++ b/shared/tikz/neural-networks/cnn/inpainting-anomaly-detect-step1-mask.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Création d'un pavage de masques sur l'image
+title_en: Creation of paving masks on the image
