--- a/shared/tikz/neural-networks/cnn/inpainting-anomaly-detect-step3-assemble.yml
+++ b/shared/tikz/neural-networks/cnn/inpainting-anomaly-detect-step3-assemble.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Assemblage des prédictions
+title_en: Combining predictions to produce only one image
