Support de cours pour boosté

--- a/sparks-formation/INTRA/2023-01-loreal/en/targets.yml
+++ b/sparks-formation/INTRA/2023-01-loreal/en/targets.yml
@@ -11,7 +11,7 @@
   title: Machine Learning --- Supervised
   sections:
     - path: en/supervised
-      flavor: mlb
+      flavor: intra-l-oreal
 
 - name: j3
   title: Machine Learning --- Unsupervised
