--- a/shared/latex/supervised/supervised.yml
+++ b/shared/latex/supervised/supervised.yml
@@ -78,6 +78,24 @@ flavors:
     - trees-details
     - random-forest
     - /questions
-
+  intra-l-oreal:
+    - regression-lineaire
+    - cost-error-function
+    - /nn/gradient-descent
+    - regression-polynomiale
+    - classification
+    - regression-logistique
+    - /questions
+    - tp-reg-lin-poly
+    - svm
+    - demo-sklearn-svm
+    - trees
+    - trees-details
+    - random-forest
+    - boosted
+    - /questions
+    - demo-sklearn-random-forest
+    - tp-random-forest
+    - tp-boosted
 title: Apprentissage supervisé
 version: 3
