--- a/shared/latex/about/about.yml
+++ b/shared/latex/about/about.yml
@@ -63,4 +63,8 @@ flavors:
     - ressources-eni
     - horaires-4j-orsys
     - tour2table
+  loreal:
+    - formateur
+    - horaires-5j-sparks
+    - tour2table
 title: Informations sur la formation
