--- a/shared/latex/en/about/about.yml
+++ b/shared/latex/en/about/about.yml
@@ -5,4 +5,8 @@ flavors:
     - ressources-orsys
     - horaires-3j-orsys
     - tour2table
+  loreal:
+    - formateur
+    - horaires-5j-sparks
+    - tour2table
 title: About the seminar
