Encore une correction des targets.yml pour l'oreal

--- a/shared/latex/en/ml/ml.yml
+++ b/shared/latex/en/ml/ml.yml
@@ -11,4 +11,12 @@ flavors:
     - learning
     - evaluation
     - /questions
+
+  mle:
+    - intro
+    - data-preparation
+    - evaluation
+    - learning
+    - /en/questions
+    - help-pointers
 title: Machine Learning
