--- a/sparks-formation/INTRA/2023-01-loreal/en/targets.yml
+++ b/sparks-formation/INTRA/2023-01-loreal/en/targets.yml
@@ -10,6 +10,9 @@
     - path: en/python/production
       flavor: light
 
+    - path: en/ml
+      flavor: mle
+
 - name: j2
   title: Machine Learning --- Supervised
   sections:
