--- a/shared/latex/en/ml/ml.yml
+++ b/shared/latex/en/ml/ml.yml
@@ -10,12 +10,23 @@ flavors:
     - data-preparation
     - learning
     - evaluation
-    - /questions
+    - /en/questions
 
   mle:
     - intro
     - data-preparation
     - evaluation
+    - learning
+    - /en/questions
+    - help-pointers
+  bda:
+    - intro
+    - $prerequisites: full
+    - data-preparation
+    - evaluation
+    - /en/questions
+    - /tp-help
+    - tp-data
     - learning
     - /en/questions
     - help-pointers
