--- a/shared/latex/en/unsupervised/unsupervised.yml
+++ b/shared/latex/en/unsupervised/unsupervised.yml
@@ -1,4 +1,9 @@
 flavors:
+  bda:
+    - introduction
+    - $dimensionality-reduction: bda
+    - $clustering: bda
+    - $anomaly-detection: full
   intra-l-oreal:
     - introduction
     - $dimensionality-reduction: mlb
